--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
     </style>
     <body>
-      <button style="z-index:-1;margin-top:195px;margin-left:320px;">Click to see awesome dog back flips!</button>
+      <button style="z-index:-1;margin-top:215px;margin-left:270px;width:50px;">Fun!</button>
       <iframe src="https://localhost:3001" width="800" height="400"></iframe>
     </body>
 </html>
